# medical-appointment-system

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  README.md  TODO.md  docker-compose.yml  env.example  package.json  pyproject.toml  setup.bat  setup.py  setup.sh
app/backend/: Dockerfile.Dockerfile
app/backend/app/: __init__.py  main.py
app/backend/app/api/: api_router.py  dependencies.py  errors.py
app/backend/app/core/: config.py  security.py  security_controls.py
app/backend/app/db/: schema.sql  (+2 more)
app/frontend/: Dockerfile.Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
app/frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
app/frontend/lib/: api.ts  types.ts  utils.ts
changelog/archive/: README.md
changelog/branches/: README.md
diagrams/: flow_diagrams.txt
docs/: API_NOTES.md  BACKEND_DB_REPORT.txt  DB_NOTES.md  ERD.md  ERD_NOTES.md  PROJECT_CONTEXT.md  REPORT_NOTES.md  SETUP.md
docs/superpowers/plans/: 2026-05-15-document-templates.md  2026-05-16-issues-26-30-31.md  2026-05-17-issue-11-admin-backend.md  2026-05-17-issues-12-37-39-44-admin-users.md  2026-05-17-issues-43-46-emergency-alerts.md
docs/superpowers/specs/: 2026-05-15-document-templates-design.md
scripts/: dev.mjs
tests/: test_admin_api.py  test_api_surface.py  test_auth_security.py  test_dev_command_config.py  test_frontend_admin_routing.py  test_frontend_login_config.py  test_frontend_workflows.py  test_mysql_database.py  test_notifications.py  test_security.py  test_setup_script.py  test_staff_api.py
(+100 files in other folders)
